Get a working EasyScript "adding int literals" test.